--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "recompose": "^0.26.0",
     "redux": "^3.7.0",
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.0",
     "redux-thunk": "^2.2.0",
-    "recompose": "^0.26.0",
     "reselect": "^3.0.1",
-    "styled-components": "^2.2.3",
-    "react-scripts": "1.0.17"
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "node-plop": "^0.5.5",
