--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.1.0",
   "author": "Tomasz Mittlener",
   "dependencies": {
+    "connected-react-router": "^4.2.3",
+    "history": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "1.0.17",
     "recompose": "^0.26.0",
     "redux": "^3.7.0",
