--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "connected-react-router": "^4.2.3",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
@@ -18,6 +19,7 @@
     "redux": "^3.7.0",
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.0",
+    "redux-promise-middleware": "^4.4.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "styled-components": "^2.2.3"
